--- a/p8105_hw6_zz2899.md
+++ b/p8105_hw6_zz2899.md
@@ -161,6 +161,9 @@ bootstrap_results %>%
 
 ![](p8105_hw6_zz2899_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
 
+The distribution of adjusted R-squared is approximately normal with a
+non-obvious tail extending to low values.
+
 ``` r
 bootstrap_results2 <- 
   boot_straps %>% 
@@ -176,7 +179,7 @@ log_product<-
   pivot_wider(names_from = term, values_from = estimate)%>%
   unnest()%>%
   janitor::clean_names()%>%
-  mutate(log_product = intercept*tmin)%>%
+  mutate(log_product = log(intercept*tmin))%>%
   select(log_product)
 ```
 
@@ -198,7 +201,7 @@ log_product%>%
     ## # A tibble: 1 × 2
     ##   ci_lower ci_upper
     ##      <dbl>    <dbl>
-    ## 1     7.15     7.83
+    ## 1     1.97     2.06
 
 ``` r
 log_product %>% 
@@ -208,3 +211,5 @@ log_product %>%
 ```
 
 ![](p8105_hw6_zz2899_files/figure-gfm/unnamed-chunk-12-1.png)<!-- -->
+
+The distribution of log(beta0\*beta1) is approxiamtely normal.
